Grammar.output
Terminals unused in grammar

   ERROR


State 80 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce


Grammar

    0 $accept: compileUnit $end

    1 compileUnit: statement
    2            | compileUnit statement
    3            | function_definition
    4            | compileUnit function_definition

    5 function_definition: FUNCTION IDENTIFIER '(' fargs ')' ':' '\n' compound_statement
    6                    | FUNCTION IDENTIFIER '(' ')' ':' '\n' compound_statement

    7 fargs: IDENTIFIER
    8      | fargs IDENTIFIER
    9      | fargs ',' IDENTIFIER

   10 statement: expression '\n'
   11          | compound_statement
   12          | if_statement
   13          | while_statement
   14          | RETURN expression '\n'
   15          | BREAK '\n'
   16          | '\n'

   17 if_statement: IF '(' expression ')' ':' '\n' statement
   18             | IF expression ':' '\n' statement
   19             | IF '(' expression ')' ':' '\n' statement ELSE ':' '\n' statement
   20             | IF expression ':' '\n' statement ELSE ':' '\n' statement

   21 while_statement: WHILE '(' expression ')' ':' '\n' statement
   22                | WHILE expression ':' '\n' statement

   23 compound_statement: INDENT DEDENT
   24                   | INDENT statement_list DEDENT

   25 statement_list: statement
   26               | statement_list statement

   27 expression: NUMBER
   28           | IDENTIFIER
   29           | IDENTIFIER '(' ')'
   30           | IDENTIFIER '(' args ')'
   31           | expression PLUS expression
   32           | expression MINUS expression
   33           | expression MULT expression
   34           | expression DIV expression
   35           | PLUS expression
   36           | MINUS expression
   37           | '(' expression ')'
   38           | IDENTIFIER '=' expression
   39           | expression AND expression
   40           | expression OR expression
   41           | NOT expression
   42           | expression GT expression
   43           | expression GTE expression
   44           | expression LT expression
   45           | expression LTE expression
   46           | expression EQUAL expression
   47           | expression NEQUAL expression

   48 args: expression
   49     | args ',' expression


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 5 6 10 14 15 16 17 18 19 20 21 22
'(' (40) 5 6 17 19 21 29 30 37
')' (41) 5 6 17 19 21 29 30 37
',' (44) 9 49
':' (58) 5 6 17 18 19 20 21 22
'=' (61) 38
error (256)
IDENTIFIER (258) 5 6 7 8 9 28 29 30 38
NUMBER (259) 27
INDENT (260) 23 24
DEDENT (261) 23 24
RETURN (262) 14
BREAK (263) 15
IF (264) 17 18 19 20
ELSE (265) 19 20
WHILE (266) 21 22
FUNCTION (267) 5 6
ERROR (268)
IFPREC (269)
OR (270) 40
AND (271) 39
NEQUAL (272) 47
EQUAL (273) 46
LT (274) 44
LTE (275) 45
GT (276) 42
GTE (277) 43
MINUS (278) 32 36
PLUS (279) 31 35
DIV (280) 34
MULT (281) 33
NOT (282) 41


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
compileUnit (35)
    on left: 1 2 3 4, on right: 0 2 4
function_definition (36)
    on left: 5 6, on right: 3 4
fargs (37)
    on left: 7 8 9, on right: 5 8 9
statement (38)
    on left: 10 11 12 13 14 15 16, on right: 1 2 17 18 19 20 21 22
    25 26
if_statement (39)
    on left: 17 18 19 20, on right: 12
while_statement (40)
    on left: 21 22, on right: 13
compound_statement (41)
    on left: 23 24, on right: 5 6 11
statement_list (42)
    on left: 25 26, on right: 24 26
expression (43)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47, on right: 10 14 17 18 19 20 21 22 31 32 33 34 35 36 37
    38 39 40 41 42 43 44 45 46 47 48 49
args (44)
    on left: 48 49, on right: 30 49


State 0

    0 $accept: . compileUnit $end

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    INDENT      shift, and go to state 3
    RETURN      shift, and go to state 4
    BREAK       shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    FUNCTION    shift, and go to state 8
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12
    '\n'        shift, and go to state 13

    compileUnit          go to state 14
    function_definition  go to state 15
    statement            go to state 16
    if_statement         go to state 17
    while_statement      go to state 18
    compound_statement   go to state 19
    expression           go to state 20


State 1

   28 expression: IDENTIFIER .
   29           | IDENTIFIER . '(' ')'
   30           | IDENTIFIER . '(' args ')'
   38           | IDENTIFIER . '=' expression

    '='  shift, and go to state 21
    '('  shift, and go to state 22

    $default  reduce using rule 28 (expression)


State 2

   27 expression: NUMBER .

    $default  reduce using rule 27 (expression)


State 3

   23 compound_statement: INDENT . DEDENT
   24                   | INDENT . statement_list DEDENT

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    INDENT      shift, and go to state 3
    DEDENT      shift, and go to state 23
    RETURN      shift, and go to state 4
    BREAK       shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12
    '\n'        shift, and go to state 13

    statement           go to state 24
    if_statement        go to state 17
    while_statement     go to state 18
    compound_statement  go to state 19
    statement_list      go to state 25
    expression          go to state 20


State 4

   14 statement: RETURN . expression '\n'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 26


State 5

   15 statement: BREAK . '\n'

    '\n'  shift, and go to state 27


State 6

   17 if_statement: IF . '(' expression ')' ':' '\n' statement
   18             | IF . expression ':' '\n' statement
   19             | IF . '(' expression ')' ':' '\n' statement ELSE ':' '\n' statement
   20             | IF . expression ':' '\n' statement ELSE ':' '\n' statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 28

    expression  go to state 29


State 7

   21 while_statement: WHILE . '(' expression ')' ':' '\n' statement
   22                | WHILE . expression ':' '\n' statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 30

    expression  go to state 31


State 8

    5 function_definition: FUNCTION . IDENTIFIER '(' fargs ')' ':' '\n' compound_statement
    6                    | FUNCTION . IDENTIFIER '(' ')' ':' '\n' compound_statement

    IDENTIFIER  shift, and go to state 32


State 9

   36 expression: MINUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 33


State 10

   35 expression: PLUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 34


State 11

   41 expression: NOT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 35


State 12

   37 expression: '(' . expression ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 36


State 13

   16 statement: '\n' .

    $default  reduce using rule 16 (statement)


State 14

    0 $accept: compileUnit . $end
    2 compileUnit: compileUnit . statement
    4            | compileUnit . function_definition

    $end        shift, and go to state 37
    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    INDENT      shift, and go to state 3
    RETURN      shift, and go to state 4
    BREAK       shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    FUNCTION    shift, and go to state 8
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12
    '\n'        shift, and go to state 13

    function_definition  go to state 38
    statement            go to state 39
    if_statement         go to state 17
    while_statement      go to state 18
    compound_statement   go to state 19
    expression           go to state 20


State 15

    3 compileUnit: function_definition .

    $default  reduce using rule 3 (compileUnit)


State 16

    1 compileUnit: statement .

    $default  reduce using rule 1 (compileUnit)


State 17

   12 statement: if_statement .

    $default  reduce using rule 12 (statement)


State 18

   13 statement: while_statement .

    $default  reduce using rule 13 (statement)


State 19

   11 statement: compound_statement .

    $default  reduce using rule 11 (statement)


State 20

   10 statement: expression . '\n'
   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    '\n'    shift, and go to state 52


State 21

   38 expression: IDENTIFIER '=' . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 53


State 22

   29 expression: IDENTIFIER '(' . ')'
   30           | IDENTIFIER '(' . args ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12
    ')'         shift, and go to state 54

    expression  go to state 55
    args        go to state 56


State 23

   23 compound_statement: INDENT DEDENT .

    $default  reduce using rule 23 (compound_statement)


State 24

   25 statement_list: statement .

    $default  reduce using rule 25 (statement_list)


State 25

   24 compound_statement: INDENT statement_list . DEDENT
   26 statement_list: statement_list . statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    INDENT      shift, and go to state 3
    DEDENT      shift, and go to state 57
    RETURN      shift, and go to state 4
    BREAK       shift, and go to state 5
    IF          shift, and go to state 6
    WHILE       shift, and go to state 7
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12
    '\n'        shift, and go to state 13

    statement           go to state 58
    if_statement        go to state 17
    while_statement     go to state 18
    compound_statement  go to state 19
    expression          go to state 20


State 26

   14 statement: RETURN expression . '\n'
   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    '\n'    shift, and go to state 59


State 27

   15 statement: BREAK '\n' .

    $default  reduce using rule 15 (statement)


State 28

   17 if_statement: IF '(' . expression ')' ':' '\n' statement
   19             | IF '(' . expression ')' ':' '\n' statement ELSE ':' '\n' statement
   37 expression: '(' . expression ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 60


State 29

   18 if_statement: IF expression . ':' '\n' statement
   20             | IF expression . ':' '\n' statement ELSE ':' '\n' statement
   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ':'     shift, and go to state 61


State 30

   21 while_statement: WHILE '(' . expression ')' ':' '\n' statement
   37 expression: '(' . expression ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 62


State 31

   22 while_statement: WHILE expression . ':' '\n' statement
   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ':'     shift, and go to state 63


State 32

    5 function_definition: FUNCTION IDENTIFIER . '(' fargs ')' ':' '\n' compound_statement
    6                    | FUNCTION IDENTIFIER . '(' ')' ':' '\n' compound_statement

    '('  shift, and go to state 64


State 33

   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   36           | MINUS expression .
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    DIV   shift, and go to state 50
    MULT  shift, and go to state 51

    $default  reduce using rule 36 (expression)


State 34

   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   35           | PLUS expression .
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    DIV   shift, and go to state 50
    MULT  shift, and go to state 51

    $default  reduce using rule 35 (expression)


State 35

   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   39           | expression . AND expression
   40           | expression . OR expression
   41           | NOT expression .
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    $default  reduce using rule 41 (expression)


State 36

   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | '(' expression . ')'
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ')'     shift, and go to state 65


State 37

    0 $accept: compileUnit $end .

    $default  accept


State 38

    4 compileUnit: compileUnit function_definition .

    $default  reduce using rule 4 (compileUnit)


State 39

    2 compileUnit: compileUnit statement .

    $default  reduce using rule 2 (compileUnit)


State 40

   40 expression: expression OR . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 66


State 41

   39 expression: expression AND . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 67


State 42

   47 expression: expression NEQUAL . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 68


State 43

   46 expression: expression EQUAL . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 69


State 44

   44 expression: expression LT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 70


State 45

   45 expression: expression LTE . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 71


State 46

   42 expression: expression GT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 72


State 47

   43 expression: expression GTE . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 73


State 48

   32 expression: expression MINUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 74


State 49

   31 expression: expression PLUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 75


State 50

   34 expression: expression DIV . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 76


State 51

   33 expression: expression MULT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 9
    PLUS        shift, and go to state 10
    NOT         shift, and go to state 11
    '('         shift, and go to state 12

    expression  go to state 77


State 52

   10 statement: expression '\n' .

    $default  reduce using rule 10 (statement)


State 53

   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   38           | IDENTIFIER '=' expression .
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51

    $default  reduce using rule 38 (expression)


State 54

   29 expression: IDENTIFIER '(' ')' .

    $default  reduce using rule 29 (expression)


State 55

   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression
   48 args: expression .

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51

    $default  reduce using rule 48 (args)


State 56

   30 expression: IDENTIFIER '(' args . ')'
   49 args: args . ',' expression

    ')'  shift, and go to state 78
    ','  shift, and go to state 79


State 57

   24 compound_statement: INDENT statement_list DEDENT .

    $default  reduce using rule 24 (compound_statement)


State 58

   26 statement_list: statement_list statement .

    $default  reduce using rule 26 (statement_list)


State 59

   14 statement: RETURN expression '\n' .

    $default  reduce using rule 14 (statement)


State 60

   17 if_statement: IF '(' expression . ')' ':' '\n' statement
   19             | IF '(' expression . ')' ':' '\n' statement ELSE ':' '\n' statement
   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | '(' expression . ')'
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ')'     shift, and go to state 80


State 61

   18 if_statement: IF expression ':' . '\n' statement
   20             | IF expression ':' . '\n' statement ELSE ':' '\n' statement

    '\n'  shift, and go to state 81


State 62

   21 while_statement: WHILE '(' expression . ')' ':' '\n' statement
   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   37           | '(' expression . ')'
   39           | expression . AND expression
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ')'     shift, and go to state 82


State 63

   22 while_statement: WHILE expression ':' . '\n' statement

    '\n'  shift, and go to state 83


State 64

    5 function_definition: FUNCTION IDENTIFIER '(' . fargs ')' ':' '\n' compound_statement
    6                    | FUNCTION IDENTIFIER '(' . ')' ':' '\n' compound_statement

    IDENTIFIER  shift, and go to state 84
    ')'         shift, and go to state 85

    fargs  go to state 86


State 65

   37 expression: '(' expression ')' .

    $default  reduce using rule 37 (expression)


State 66

   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   39           | expression . AND expression
   40           | expression . OR expression
   40           | expression OR expression .
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51

    $default  reduce using rule 40 (expression)


State 67

   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   39           | expression . AND expression
   39           | expression AND expression .
   40           | expression . OR expression
   42           | expression . GT expression
   43           | expression . GTE expression
   44           | expression . LT expression
   45           | expression . LTE expression
   46           | expression . EQUAL expression
   47           | expression . NEQUAL expression

    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51

    $default  reduce using rule 39 (expression)


State 68

   31 expression: expression . PLUS expression
   32           | expression . MINUS expression
   33           | expression . MULT expression
   34           | expression . DIV expression
   39           | expression . AND expression
